SQL, projection, get games by list